# SONiC-python-LLM-consistency-checker

./: .env.example  .gitignore  LICENSE  README.md  agent.md  pyproject.toml  sonic_mcp_server.py
.pi/extensions/sonic-mcp/: index.ts  package-lock.json  package.json
.pi/skills/sonic/: SKILL.md
docs/readme/: STEP_01.md  STEP_02.md  STEP_03.md  STEP_04.md  STEP_04A.md  STEP_05.md  STEP_06.md  STEP_07.md
sonic_consistency_checker/ai/: chat_agent.py  explanation_agent.py  mcp_bridge.py  model_provider.py  models.py  prompt_templates.py  skill_loader.py  tools.py
sonic_consistency_checker/api/: main.py  routes_ai.py  routes_dbs.py  routes_findings.py  routes_ports.py  routes_swss.py
sonic_consistency_checker/cli/: main.py
sonic_consistency_checker/core/: db_config_loader.py  db_constants.py  diff_engine.py  discovery.py  models.py  redis_client.py  summary.py
sonic_consistency_checker/sonic/: ports.py
sonic_consistency_checker/swss/: compare.py  config_db.py  connector.py  safety.py  sonic_v2.py  table_reader.py  table_writer.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css  types.ts
ui/src/components/: Card.tsx  FindingCard.tsx  JsonViewer.tsx  KeyValueTable.tsx  Section.tsx  StatusBadge.tsx
ui/src/pages/: Chat.tsx  Dashboard.tsx  DbExplorer.tsx  Findings.tsx  PortExplorer.tsx  SwssSdkExplorer.tsx
