[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic_consistency_checker"
version = "0.1.0"
description = "A Python-based SONiC consistency checker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sonic-checker = "sonic_consistency_checker.cli.main:app"
